force-app/main/default/objects/DM_Interest_Posting_Transaction__c/DM_Interest_Posting_Transaction__c.object-meta.xml
<CustomObject>
    <label>DM Interest Posting Transaction</label>
    <nameField>
        <label>DM  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DM Interest Posting Transaction</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>