force-app/main/default/objects/DM_Interest_Posting_Transaction__c/fields/DM_Accrued_to_Investor__c.field-meta.xml
<CustomField>
    <fullName>DM_Accrued_to_Investor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM Accrued to Investor</label>
    <type>Checkbox</type>
</CustomField>