force-app/main/default/objects/DM_Interest_Posting_Transaction__c/fields/DM_Amortization_Schedule__c.field-meta.xml
<CustomField>
    <fullName>DM_Amortization_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DM Amortization Schedule</label>
    <referenceTo>DM_Repayment_Schedule__c</referenceTo>
    <relationshipLabel>DM Interest Posting Transaction</relationshipLabel>
    <relationshipName>DM_Interest_Posting_Transaction</relationshipName>
    <type>Lookup</type>
</CustomField>