force-app/main/default/objects/DM_Interest_Posting_Transaction__c/fields/DM_Capitalization_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Capitalization_Date__c</fullName>
    <label>DM Capitalization Date</label>
    <type>Date</type>
</CustomField>