force-app/main/default/objects/DM_Interest_Posting_Transaction__c/fields/DM_Capitalized__c.field-meta.xml
<CustomField>
    <fullName>DM_Capitalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM Capitalized</label>
    <type>Checkbox</type>
</CustomField>