force-app/main/default/objects/DM_Interest_Posting_Transaction__c/fields/DM_CL_Contract__c.field-meta.xml
<CustomField>
    <fullName>DM_CL_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DM CL Contract</label>
    <referenceTo>DM_Loan_Account__c</referenceTo>
    <relationshipLabel>DM Interest Posting Transaction</relationshipLabel>
    <relationshipName>DM_Interest_Posting_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>