force-app/main/default/objects/DM_Interest_Posting_Transaction__c/fields/DM_Current_Interest_Accrued__c.field-meta.xml
<CustomField>
    <fullName>DM_Current_Interest_Accrued__c</fullName>
    <label>DM Current Interest Accrued</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>