force-app/main/default/objects/DM_Interest_Posting_Transaction__c/fields/DM_Current_Interest_Accrued_On_Principal__c.field-meta.xml
<CustomField>
    <fullName>DM_Current_Interest_Accrued_On_Principal__c</fullName>
    <label>DM Current Interest Accrued On Principal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>