force-app/main/default/objects/DM_Interest_Posting_Transaction__c/fields/DM_Discarded__c.field-meta.xml
<CustomField>
    <fullName>DM_Discarded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM Discarded</label>
    <type>Checkbox</type>
</CustomField>