force-app/main/default/objects/DM_Interest_Posting_Transaction__c/fields/DM_Interest_Paid__c.field-meta.xml
<CustomField>
    <fullName>DM_Interest_Paid__c</fullName>
    <label>DM Interest Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>