force-app/main/default/objects/DM_Interest_Posting_Transaction__c/fields/DM_Interest_Posting_Transaction_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>DM_Interest_Posting_Transaction_Snapshot__c</fullName>
    <label>DM Interest Posting Transaction Snapshot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>