force-app/main/default/objects/DM_Interest_Posting_Transaction__c/fields/DM_Interest_Posting_Type__c.field-meta.xml
<CustomField>
    <fullName>DM_Interest_Posting_Type__c</fullName>
    <label>DM Interest Posting Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Excess PayOff</fullName>
            </value>
            <value>
                <fullName>Interest Adjustment</fullName>
            </value>
            <value>
                <fullName>IOA on IOA</fullName>
            </value>
            <value>
                <fullName>IOA on Unpaid Principal/Interest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>