force-app/main/default/objects/DM_Interest_Posting_Transaction__c/fields/DM_IOA_Summary__c.field-meta.xml
<CustomField>
    <fullName>DM_IOA_Summary__c</fullName>
    <label>DM IOA Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>