force-app/main/default/objects/DM_Interest_Posting_Transaction__c/fields/DM_Is_Billed__c.field-meta.xml
<CustomField>
    <fullName>DM_Is_Billed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM Is Billed</label>
    <type>Checkbox</type>
</CustomField>