force-app/main/default/objects/DM_Interest_Posting_Transaction__c/fields/DM_Last_Accrual_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Last_Accrual_Date__c</fullName>
    <label>DM Last Accrual Date</label>
    <type>Date</type>
</CustomField>