force-app/main/default/objects/DM_Interest_Posting_Transaction__c/fields/DM_Level__c.field-meta.xml
<CustomField>
    <fullName>DM_Level__c</fullName>
    <label>DM Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>