force-app/main/default/objects/DM_Interest_Posting_Transaction__c/fields/DM_Master_Archive_Object__c.field-meta.xml
<CustomField>
    <fullName>DM_Master_Archive_Object__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM Master Archive Object</label>
    <type>Checkbox</type>
</CustomField>