force-app/main/default/objects/DM_Interest_Posting_Transaction__c/fields/DM_Paid__c.field-meta.xml
<CustomField>
    <fullName>DM_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM Paid</label>
    <type>Checkbox</type>
</CustomField>