force-app/main/default/objects/DM_Interest_Posting_Transaction__c/fields/DM_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>DM_Payment_Amount__c</fullName>
    <label>DM Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>