force-app/main/default/objects/DM_Interest_Posting_Transaction__c/fields/DM_Posted__c.field-meta.xml
<CustomField>
    <fullName>DM_Posted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM Posted</label>
    <type>Checkbox</type>
</CustomField>