force-app/main/default/objects/DM_Interest_Posting_Transaction__c/fields/DM_Principal_Posted__c.field-meta.xml
<CustomField>
    <fullName>DM_Principal_Posted__c</fullName>
    <label>DM Principal Posted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>