force-app/main/default/objects/DM_Interest_Posting_Transaction__c/fields/DM_Status__c.field-meta.xml
<CustomField>
    <fullName>DM_Status__c</fullName>
    <label>DM Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>