force-app/main/default/objects/DM_Interest_Posting_Transaction__c/fields/DM_Summary__c.field-meta.xml
<CustomField>
    <fullName>DM_Summary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM Summary</label>
    <type>Checkbox</type>
</CustomField>