force-app/main/default/objects/DM_Interest_Posting_Transaction__c/fields/DM_Transaction_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Transaction_Due_Date__c</fullName>
    <label>DM Transaction Due Date</label>
    <type>Date</type>
</CustomField>