force-app/main/default/objects/DM_Interest_Posting_Transaction__c/fields/DM_Transaction_Time__c.field-meta.xml
<CustomField>
    <fullName>DM_Transaction_Time__c</fullName>
    <label>DM Transaction Time</label>
    <type>DateTime</type>
</CustomField>