force-app/main/default/objects/DM_Interest_Posting_Transaction__c/fields/Parent_Interest_Posting_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Parent_Interest_Posting_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Interest Posting Transaction</label>
    <referenceTo>loan__Interest_Posting_Transaction__c</referenceTo>
    <relationshipLabel>DM Interest Posting Transaction</relationshipLabel>
    <relationshipName>DM_Interest_Posting_Transaction</relationshipName>
    <type>Lookup</type>
</CustomField>